[package]
name = "tachyonfx"
version = "0.6.0-dev"
edition = "2021"
license = "MIT"
description = "A ratatui library for creating shader-like effects in TUIs."
repository = "https://github.com/junkdog/tachyonfx"
homepage = "https://github.com/junkdog/tachyonfx"
documentation = "https://docs.rs/tachyonfx"
readme = "README.md"
keywords = ["ratatui", "terminal", "effects", "UI", "TUI"]
categories = ["command-line-interface"]
authors = ["Adrian Papari <junkdog@angelhill.net>"]
exclude = ["images/*.gif", ".*"]

[dependencies]
bon = "2.1.0"
colorsys = "0.6.7"
ratatui = "0.28.1"
simple-easing = "1.0.1"

[dev-dependencies]
crossterm = "0.28.1"

[features]
std-duration = []

[[example]]
name = "open-window"

[[example]]
name = "basic-effects"

[[example]]
name = "tweens"

[[example]]
name = "fx-chart"
