[package]
name = "tachyonfx"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "A ratatui library for creating shader-like effects in TUIs."
repository = "https://github.com/junkdog/tachyonfx"
homepage = "https://github.com/junkdog/tachyonfx"
documentation = "https://docs.rs/tachyonfx"
readme = "README.md"
keywords = ["ratatui", "terminal", "effects", "UI", "TUI"]
categories = ["command-line-interface"]
authors = ["Adrian Papari <junkdog@angelhill.net>"]
exclude = ["images/*.gif", ".*"]

[dependencies]
bon = "2.3.0"
colorsys = "0.6.7"
ratatui = "0.29.0"
simple-easing = "1.0.1"

[dev-dependencies]
crossterm = "0.28.1"

[features]
std-duration = []
sendable = []

[[example]]
name = "minimal"

[[example]]
name = "open-window"

[[example]]
name = "basic-effects"

[[example]]
name = "tweens"

[[example]]
name = "fx-chart"
